[package]
name = "seq-hash"
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/rust-seq/seq-hash"
keywords = ["simd", "dna", "bioinformatics"]
categories = ["data-structures", "science::bioinformatics"]
authors = ["Ragnar Groot Koerkamp", "Igor Martayan"]
description = "A SIMD-accelerated library to compute hashes of DNA sequences"

[dependencies]
packed-seq.path = "../packed-seq"
wide = "0.7"

[dev-dependencies]
rand = "0.9"
