[package]
name = "seq-hash"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rust-seq/seq-hash"
keywords = ["simd", "dna", "bioinformatics"]
categories = ["data-structures", "science::bioinformatics"]
authors = ["Ragnar Groot Koerkamp", "Igor Martayan"]
description = "A SIMD-accelerated library to compute hashes of DNA sequences"

[dependencies]
packed-seq = "4.1.0"
wide = "0.7"

[dev-dependencies]
itertools = "0.14.0"
rand = "0.9"

[features]
scalar = ["packed-seq/scalar"]
