[package]
name = "seq-hash"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rust-seq/seq-hash"
keywords = ["simd", "dna", "bioinformatics"]
categories = ["data-structures", "science::bioinformatics"]
authors = ["Ragnar Groot Koerkamp", "Igor Martayan"]
description = "A SIMD-accelerated library to compute hashes of DNA sequences"

[dependencies]
packed-seq = "5.0"

[dev-dependencies]
itertools = "0.15"
rand = "0.10"

[features]
scalar = ["packed-seq/scalar"]

[profile.release]
lto = true
debug = false
